Added roles to JWT, fixed all Project paths with authorization
